--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -5,12 +5,21 @@ body {
 #Header a:hover {
   color: #fff;
 }
+
 #bg-img {
   background: url("../images/bg-img.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
   min-height: 500px;
 }
+
 #About {
   margin-top: -200px;
+}
+
+.footer-text {
+  color: white;
+  font-size: 15px;
+  text-align: center;
+  margin-top: 5px;
 }
