--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -111,27 +111,27 @@ h3 {
 
 .projects {
   position: relative;
+  left: 30px;
   float: left;
-  width: 274px;
+  width: 275px;
   margin: 20px 0 25px;
   overflow: auto;
 }
 
-.projects:nth-child(even) {
-  margin-right: 40px;
-}
-
 .projects img {
-  width: 100%;
+  width: 250px;
+  height: 250px;
+  padding: 5px;
   border: 0 none;
   opacity: 0.8;
 }
 
 .projects h3 {
   position: absolute;
+  left: 5px;
   bottom: 20px;
-  width: 100%;
-  padding: 15px;
+  width: 87.5%;
+  padding: 10px;
   margin-bottom: 0;
   font-weight: 300;
   line-height: 30px;
@@ -140,6 +140,8 @@ h3 {
   background: gray;
   border-bottom: 0;
 }
+
+/* profile pic */
 
 .auth-image {
   float: left;
