--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -138,7 +138,7 @@ h3 {
   line-height: 30px;
   color: #fff;
   text-align: center;
-  background: gray;
+  background: rgba(128, 128, 128, 0.774);
   border-bottom: 0;
 }
 
