--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -178,7 +178,7 @@ input[type="submit"] {
   font-size: 18px;
   color: #fff;
   cursor: pointer;
-  background: #4aaaa5;
+  background: #73a9fa;
   border: 0 none;
 }
 
